# media-server

./: LICENSE  media-server.code-workspace
services/ingest-watcher/: main.py  pyproject.toml  watchdog_example.py
services/ingest-watcher/src/ingest_watcher/: __main__.py  bootstrap.py
services/ingest-watcher/src/ingest_watcher/domain/: entities.py  events.py  repositories.py  services.py  snapshot_state.py
services/ingest-watcher/src/ingest_watcher/infrastructure/: file_watcher.py  in_memory_snapshot_state.py  in_memory_tree_snapshot_state.py
services/ingest-watcher/tests/: conftest.py  tes_domain_snapshot.py  tes_entities.py  test_contract_snapshot_state.py  test_domain_snapshot.py  test_in_memory_tree_snapshot_state.py
