[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingest-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0.0",
    "watchdog>=6.0.0",
]

[tool.hatchling.build]
packages = ["src/ingest_watcher"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
